--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,32 @@
 body{
-    background-color: blue;
+    background-color: white;
 }
 
 #logo{
-    padding-top: 1000px;
-    max-width: 20%;
-    max-height: 20%;
-    scale: auto;
+    max-width: 30%;
+    max-height: auto;
+}
+
+#loginForm{
+    width: 500px;
+    margin: auto;
+}
+
+#loginButton{
+    margin-top: 10px;
+}
+
+#instructions{
+    margin-top: 100px;
+}
+
+.centreme{
+    text-align: center;
+}
+
+.giveMeSpace{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
