--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,6 +26,15 @@
                 </div>
               </div>
 
+              <form id="navbarSearchBox" class="form-inline ml-auto giveMeSpace">
+                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+
+              <div class="dropdown giveMeSpace">
+                <button class="btn btn-primary" type="button" id="logout">Logout</button>
+              </div>
+
         </nav>
     </row>
 </div>
