--- a/views/mainmenu.ejs
+++ b/views/mainmenu.ejs
@@ -17,4 +17,14 @@
         <p>Click the links in the bar at the top to navigate the website.</p>
 
     </div>
+
+    <div id="examplePersonResult">
+        <%- partial('partials/userSearchResult') %>
+    </div>
+
+    <div id="exampleContractResult">
+        <%- partial('partials/contractSearchResult') %>
+    </div>
+
+
 </body>
