--- a/views/user.ejs
+++ b/views/user.ejs
@@ -39,7 +39,7 @@
                 <input type="file" id="picture" name="picture" accept="image/png, image/jpeg" class="form-control">
 
                 <label for="activeContract">Active Contract</label>
-                <select name="activeContract" id="activeContract" class="giveMeSpace">
+                <select name="activeContract" id="activeContract" class="form-control">
                     <option value="con1">Con1</option>
                     <option value="con2">Con2</option>
                     <option value="con3">Con3</option>
