finished ready to share

--- a/views/partials/contractSearchResult.ejs
+++ b/views/partials/contractSearchResult.ejs
@@ -1,5 +1,22 @@
-<div class="contractResult searchResult">
+<div class="contractResult searchResult row align-items-center">
 
+    <div class="col-2">
+        <img src="img/contract.png" class="photoOutline">
+    </div>
 
+    <div class="col-6">
+        <div class="row">Employee:</div>
+        <div class="row">Contract Type:</div>
+        <div class="row">Salary:</div>
+        <div class="row">Grade:</div>
+    </div>
+
+    <div class="col-2">
+        <a href="user" class="btn btn-primary">View</a>
+    </div>
+
+    <div class="col-2">
+        <a href="user" class="btn btn-primary">Edit</a>
+    </div>
 
 </div>
