--- a/views/partials/userSearchResult.ejs
+++ b/views/partials/userSearchResult.ejs
@@ -1,5 +1,22 @@
-<div class="userResult searchResult">
+<div class="contractResult searchResult row align-items-center">
+
     <div class="col-2">
-        <img src="/public/img/nopic.png" alt="">
+        <img src="img/nopic.png" class="photoOutline">
     </div>
+
+    <div class="col-6">
+        <div class="row">Name:</div>
+        <div class="row">Employee ID:</div>
+        <div class="row">DOB:</div>
+        <div class="row">Department:</div>
+    </div>
+
+    <div class="col-2">
+        <a href="contract" class="btn btn-primary">View</a>
+    </div>
+
+    <div class="col-2">
+        <a href="contract" class="btn btn-primary">Edit</a>
+    </div>
+
 </div>
