--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@ body{
 }
 
 #instructions{
-    margin-top: 100px;
+    margin-top: 20px;
 }
 
 .centreme{
@@ -43,4 +43,18 @@ body{
 [type="checkbox"]
 {
     vertical-align:middle;
+}
+
+.photoOutline{
+    border-style: solid;
+    border-radius: 15px;
+    margin: 15px;
+}
+
+.searchResult{
+    max-width: 90%;
+    align-self: center;
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
